tests/acs-security-demos-with-netpol-list/netpol-list.yaml
apiVersion: networking.k8s.io/v1
items:
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: asset-cache-netpol
        namespace: frontend
      spec:
        ingress:
            - from:
                - namespaceSelector: {}
              ports:
                - port: 8080
                  protocol: TCP
        podSelector:
            matchLabels:
                app: asset-cache
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: catalog-netpol
        namespace: backend
      spec:
        ingress:
            - from:
                - podSelector:
                    matchLabels:
                        app: recommendation
              ports:
                - port: 8080
                  protocol: TCP
            - from:
                - podSelector:
                    matchLabels:
                        app: reports
              ports:
                - port: 8080
                  protocol: TCP
        podSelector:
            matchLabels:
                app: catalog
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: checkout-netpol
        namespace: backend
      spec:
        egress:
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - podSelector:
                    matchLabels:
                        app: notification
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - podSelector:
                    matchLabels:
                        app: recommendation
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: payments
                  podSelector:
                    matchLabels:
                        app: gateway
            - ports:
                - port: 5353
                  protocol: UDP
              to:
                - namespaceSelector: {}
        ingress:
            - from:
                - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: frontend
                  podSelector:
                    matchLabels:
                        app: webapp
              ports:
                - port: 8080
                  protocol: TCP
        podSelector:
            matchLabels:
                app: checkout
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: gateway-netpol
        namespace: payments
      spec:
        egress:
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - podSelector:
                    matchLabels:
                        app: mastercard-processor
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - podSelector:
                    matchLabels:
                        app: visa-processor
            - ports:
                - port: 5353
                  protocol: UDP
              to:
                - namespaceSelector: {}
        ingress:
            - from:
                - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: backend
                  podSelector:
                    matchLabels:
                        app: checkout
              ports:
                - port: 8080
                  protocol: TCP
        podSelector:
            matchLabels:
                app: gateway
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: mastercard-processor-netpol
        namespace: payments
      spec:
        ingress:
            - from:
                - podSelector:
                    matchLabels:
                        app: gateway
              ports:
                - port: 8080
                  protocol: TCP
        podSelector:
            matchLabels:
                app: mastercard-processor
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: notification-netpol
        namespace: backend
      spec:
        ingress:
            - from:
                - podSelector:
                    matchLabels:
                        app: checkout
              ports:
                - port: 8080
                  protocol: TCP
        podSelector:
            matchLabels:
                app: notification
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: recommendation-netpol
        namespace: backend
      spec:
        egress:
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - podSelector:
                    matchLabels:
                        app: catalog
            - ports:
                - port: 5353
                  protocol: UDP
              to:
                - namespaceSelector: {}
        ingress:
            - from:
                - podSelector:
                    matchLabels:
                        app: checkout
              ports:
                - port: 8080
                  protocol: TCP
            - from:
                - podSelector:
                    matchLabels:
                        app: reports
              ports:
                - port: 8080
                  protocol: TCP
            - from:
                - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: frontend
                  podSelector:
                    matchLabels:
                        app: webapp
              ports:
                - port: 8080
                  protocol: TCP
        podSelector:
            matchLabels:
                app: recommendation
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: reports-netpol
        namespace: backend
      spec:
        egress:
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - podSelector:
                    matchLabels:
                        app: catalog
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - podSelector:
                    matchLabels:
                        app: recommendation
            - ports:
                - port: 5353
                  protocol: UDP
              to:
                - namespaceSelector: {}
        ingress:
            - from:
                - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: frontend
                  podSelector:
                    matchLabels:
                        app: webapp
              ports:
                - port: 8080
                  protocol: TCP
        podSelector:
            matchLabels:
                app: reports
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: shipping-netpol
        namespace: backend
      spec:
        ingress:
            - from:
                - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: frontend
                  podSelector:
                    matchLabels:
                        app: webapp
              ports:
                - port: 8080
                  protocol: TCP
        podSelector:
            matchLabels:
                app: shipping
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: visa-processor-netpol
        namespace: payments
      spec:
        ingress:
            - from:
                - podSelector:
                    matchLabels:
                        app: gateway
              ports:
                - port: 8080
                  protocol: TCP
        podSelector:
            matchLabels:
                app: visa-processor
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: webapp-netpol
        namespace: frontend
      spec:
        egress:
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: backend
                  podSelector:
                    matchLabels:
                        app: checkout
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: backend
                  podSelector:
                    matchLabels:
                        app: recommendation
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: backend
                  podSelector:
                    matchLabels:
                        app: reports
            - ports:
                - port: 8080
                  protocol: TCP
              to:
                - namespaceSelector:
                    matchLabels:
                        kubernetes.io/metadata.name: backend
                  podSelector:
                    matchLabels:
                        app: shipping
            - ports:
                - port: 5353
                  protocol: UDP
              to:
                - namespaceSelector: {}
        ingress:
            - from:
                - namespaceSelector: {}
              ports:
                - port: 8080
                  protocol: TCP
        podSelector:
            matchLabels:
                app: webapp
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: default-deny-in-namespace-backend
        namespace: backend
      spec:
        podSelector: {}
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: default-deny-in-namespace-frontend
        namespace: frontend
      spec:
        podSelector: {}
        policyTypes:
            - Ingress
            - Egress
      status: {}
    - apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      metadata:
        creationTimestamp: null
        name: default-deny-in-namespace-payments
        namespace: payments
      spec:
        podSelector: {}
        policyTypes:
            - Ingress
            - Egress
      status: {}
kind: NetworkPolicyList
metadata: {}
